Fix visual bug - content of dropdown menu clipped

--- a/packages/styles/globals.import.styl
+++ b/packages/styles/globals.import.styl
@@ -10,8 +10,10 @@ body
   font-family inherit
   text-shadow 0 0 1px rgba(255,255,255,.5)
 
+.page-wrap
+  min-height 100vh
+
 .content-wrap
-  padding-top 20px
   margin-bottom 40px
   padding-bottom $footer-height-actual+10
 
@@ -29,7 +31,6 @@ h5
   color $d-gray
 
 .view-header
-  margin-top -20px
   padding 20px 0
   border-bottom 2px solid $border-gray
   +below(2)
