--- a/packages/styles/layout.import.styl
+++ b/packages/styles/layout.import.styl
@@ -1,6 +1,6 @@
 .pane
   position absolute
-  top 2px
+  top 0
   bottom 0
   width 22.5%
   padding-top 85px
@@ -28,7 +28,6 @@
   min-height 65px
   max-height 65px
   overflow hidden
-  top 2px
   z-index $top-layer
   width 22.5%
   background $sub-header-BG
